[workspace]

members = [
    "easy/_0001_two_sum",
    "easy/_1365",
    "easy/_2099",
    "easy/_2114",
    "easy/_2235",
    "easy/_2236",
    "medium/_0002_add_two_numbers",
    "medium/_0003_longest_substr",
    "hard/_0004_median_of_two_sorted_arrays",
    "medium/_0005_longest_palindromic_substr",
]