[workspace]

members = [
    "easy/_0001_two_sum",
    "easy/_1313",
    "easy/_1342",
    "easy/_1365",
    "easy/_1389",
    "easy/_1528",
    "easy/_1720",
    "easy/_2099",
    "easy/_2114",
    "easy/_2235",
    "easy/_2236",
    "medium/_0002_add_two_numbers",
    "medium/_0003_longest_substr",
    "hard/_0004_median_of_two_sorted_arrays",
    "medium/_0005_longest_palindromic_substr",
]